@@ -1,107 +1,116 @@
 package com.example.aston.service;
 
+import com.example.aston.dto.AddressRequestDTO;
 import com.example.aston.dto.TravelServiceRequestDTO;
 import com.example.aston.mapper.TravelServiceMapper;
-import com.example.aston.model.Attraction;
-import com.example.aston.model.TravelService;
+import com.example.aston.model.Address;
 import com.example.aston.model.ServiceType;
+import com.example.aston.model.TravelService;
 import com.example.aston.repository.TravelServiceRepository;
 import com.example.aston.service.travel_service.TravelServiceServiceImpl;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
+import org.testcontainers.junit.jupiter.Testcontainers;
 
 import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
 
 
+@Testcontainers
+@SpringBootTest
 class TravelServiceServiceTest {
 
-    @Mock
-    private TravelServiceRepository serviceRepo;
+    private final TravelServiceRepository serviceRepo;
 
-    @Mock
-    private TravelServiceMapper serviceMapper;
+    private final TravelServiceMapper serviceMapper;
 
-    @InjectMocks
-    private TravelServiceServiceImpl travelService;
+    private final TravelServiceServiceImpl travelService;
 
-    private TravelService  travelServiceEntity;
-    private TravelServiceRequestDTO travelServiceRequestDTO;
-    private UUID uuid;
+    @Autowired
+    public TravelServiceServiceTest(TravelServiceRepository serviceRepo,
+                                    TravelServiceMapper serviceMapper,
+                                    TravelServiceServiceImpl travelService) {
+        this.serviceRepo = serviceRepo;
+        this.serviceMapper = serviceMapper;
+        this.travelService = travelService;
+    }
+
 
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
-
-        uuid = UUID.randomUUID();
-        travelServiceEntity = new TravelService();
-
-        travelServiceRequestDTO = new TravelServiceRequestDTO("Test name","Test Description", ServiceType.RENTAL_SERVICE);
-
-        when(serviceMapper.mapToTravelServiceRequestDTO(travelServiceEntity)).thenReturn(travelServiceRequestDTO);
+        serviceRepo.deleteAll();
     }
+
+    private TravelService createTravelService() {
+        TravelService service = new TravelService();
+        service.setType(ServiceType.RENTAL_SERVICE);
+        service.setDescription("Test Description");
+        service.setName("Test Name");
+        return service;
+    }
+
 
     @Test
     void findById_ShouldReturnTravelServiceRequestDTO_WhenServiceExists() {
-        when(serviceRepo.findById(uuid)).thenReturn(Optional.of(travelServiceEntity));
 
-        TravelServiceRequestDTO result = travelService.findById(uuid);
+        TravelService service = createTravelService();
+        service = serviceRepo.save(service);
+
+        TravelServiceRequestDTO expectedDTO = serviceMapper.mapToTravelServiceRequestDTO(service);
+
+        TravelServiceRequestDTO result = travelService.findById(service.getId());
 
         assertNotNull(result);
-        assertEquals(travelServiceRequestDTO, result);
-        verify(serviceRepo, times(1)).findById(uuid);
+        assertEquals(expectedDTO, result);
     }
 
     @Test
     void findById_ShouldThrowRuntimeException_WhenServiceDoesNotExist() {
-        when(serviceRepo.findById(uuid)).thenReturn(Optional.empty());
+        UUID id = UUID.randomUUID();
 
-        RuntimeException exception = assertThrows(RuntimeException.class, () -> {
-            travelService.findById(uuid);
-        });
+        Exception exception = assertThrows(RuntimeException.class, () -> travelService.findById(id));
+        assertEquals("Travel Service not found by id: " + id, exception.getMessage());
 
-        assertEquals("Travel Service not found by id: " + uuid, exception.getMessage());
-        verify(serviceRepo, times(1)).findById(uuid);
     }
 
     @Test
     void getAll_ShouldReturnListOfTravelServiceRequestDTO_WhenServicesExist() {
-        List<TravelService> services = Collections.singletonList(travelServiceEntity);
-        when(serviceRepo.findAll()).thenReturn(services);
-        when(serviceMapper.mapToTravelServiceRequestDTO(services)).thenReturn(Collections.singletonList(travelServiceRequestDTO));
+        TravelService service = createTravelService();
+        TravelService service1 = createTravelService();
+        serviceRepo.saveAll(List.of(service,service1));
 
+        List<TravelServiceRequestDTO> expectedDTOs = serviceMapper.mapToTravelServiceRequestDTO(List.of(service,service1));
         List<TravelServiceRequestDTO> result = travelService.getAll();
 
         assertNotNull(result);
-        assertEquals(1, result.size());
-        assertEquals(travelServiceRequestDTO, result.get(0));
-        verify(serviceRepo, times(1)).findAll();
+        assertEquals(expectedDTOs.size(), result.size());
+
     }
 
     @Test
     void save_ShouldReturnTravelServiceRequestDTO_WhenServiceIsSaved() {
-        when(serviceRepo.save(travelServiceEntity)).thenReturn(travelServiceEntity);
+        TravelService service = createTravelService();
 
-        TravelServiceRequestDTO result = travelService.save(travelServiceEntity);
+        TravelServiceRequestDTO result = travelService.save(service);
 
         assertNotNull(result);
-        assertEquals(travelServiceRequestDTO, result);
-        verify(serviceRepo, times(1)).save(travelServiceEntity);
+        assertEquals(service.getDescription(), result.description());
+        assertEquals(service.getName(), result.name());
+        assertEquals(service.getType(), result.type());
+
     }
 
     @Test
     void delete_ShouldDeleteService_WhenServiceExists() {
-        doNothing().when(serviceRepo).deleteById(uuid);
+        TravelService service = createTravelService();
+        service = serviceRepo.save(service);
 
-        travelService.delete(uuid);
+        travelService.delete(service.getId());
 
-        verify(serviceRepo, times(1)).deleteById(uuid);
+        assertFalse(serviceRepo.findById(service.getId()).isPresent());
+
     }
 }
